# data_enricher

./: .gitignore  LICENSE  README.md  cvae_demo.ipynb  kde_demo.ipynb  pyproject.toml  setup.py  test_notebook.ipynb  test_notebook_vae.ipynb  toy_data_generator.ipynb
data_enricher/: comparison.py
data_enricher/models/: __init__.py
data_enricher/utils/: __init__.py  kde_utils.py  vae_utils.py
examples/: cvae_demo.ipynb  kde_demo.ipynb  vae_demo.ipynb
examples/data/: europe.csv  toy_data.csv
src/data_enricher/models/: kde_models.py  submodels.py  vae_models.py
