# FILEPATH: /home/kbolat/Python/data_enricher/pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_enricher"
authors = [
    {name = "Kutay Bölat", email = "k.bolat@tudelft.nl"},
]
version = "0.1.3"
description = "A Python package for enriching data by probabilistic modelling."
readme = "README.md"
requires-python = ">=3.9,<=3.10"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.0.0",
    "scipy>=1.8.1",
]

[project.urls]
Repository = "https://github.com/kabolat/data_enricher"